# my-hyprland-plugin

./: .clang-format  CMakeLists.txt  README.md
src/: focusorlaunch.cpp  focusorlaunch.h  lib.cpp  myplugin.cpp  myplugin.h
